--- a/temporal/t.vect.what.strds/t.vect.what.strds.html
+++ b/temporal/t.vect.what.strds/t.vect.what.strds.html
@@ -24,6 +24,7 @@ t.vect.what.strds input=precip_stations@climate_2009_2012 \
 <a href="v.univar.html">v.univar</a>,
 <a href="v.what.rast.html">v.what.rast</a>,
 <a href="v.what.rast3.html">v.what.rast3</a>,
+<a href="v.what.strds.html">v.what.strds</a>,
 <a href="v.what.vect.html">v.what.vect</a>,
 <a href="t.create.html">t.create</a>,
 <a href="t.info.html">t.info</a>
