temporal manual: link to v.what.strds
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@66335 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/temporal/temporalintro.html
+++ b/temporal/temporalintro.html
@@ -113,6 +113,8 @@ maps.
     <li><a href="t.rast.neighbors.html">t.rast.neighbors</a></li>
 </ul>
 
+Additionally, there is <a href="v.what.strds.html">v.what.strds</a>.
+
 <h4>Aggregation and accumulation analysis</h4>
 
 The temporal framework support the aggregation of space time raster
