r.reclass: Remove duplicate words from the manual
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66401 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.reclass/r.reclass.html
+++ b/raster/r.reclass/r.reclass.html
@@ -36,7 +36,7 @@ the raster values down to the next integer.
 
 <p>Also note that although the user can generate a <em>r.reclass</em> map
 which is based on another <em>r.reclass</em> map,
-the new <em>r.reclass</em> map map will be stored in GRASS as a reclass
+the new <em>r.reclass</em> map will be stored in GRASS as a reclass
 of the <em>original</em> raster map on which the first reclassed map was
 based.  Therefore, while GRASS allows the user to provide <em>r.reclass</em> 
 map layer information which is based on an already reclassified map
