--- a/temporal/t.rast.import/t.rast.import.html
+++ b/temporal/t.rast.import/t.rast.import.html
@@ -8,17 +8,20 @@ was exported with <a href="t.rast.export.html">t.rast.export</a>.
 Optionally a base map name can be provided to avoid that existing
 raster maps are overwritten by the map names that are used in the STRDS
 archive.
+<p>
+The <b>directory</b> is used as work directory in case of import but
+can also be used as a data directory when using GeoTIFF for the data
+exchange.
 
 <h2>EXAMPLE</h2>
 
-Inside the North Carolina space time dataset it is possible to find a package
-called <em>lst_daily.tar.bzip2</em> with daily data from MODIS LST. Try
-to import it running:
+The North Carolina space time dataset contains a data package called 
+<em>lst_daily.tar.bzip2</em> with daily data from MODIS LST. Import it
+by running:
 
 <div class="code"><pre>
 t.rast.import input=lst_daily.tar.bzip2 output=lst_daily \
               basename=lst directory=/tmp
-
 </pre></div>
 
 <h2>SEE ALSO</h2>
@@ -37,4 +40,3 @@ t.rast.import input=lst_daily.tar.bzip2 output=lst_daily \
 S&ouml;ren Gebbert, Th&uuml;nen Institute of Climate-Smart Agriculture
 
 <p><i>Last changed: $Date$</i>
-
