--- a/temporal/t.vect.export/t.vect.export.html
+++ b/temporal/t.vect.export/t.vect.export.html
@@ -12,23 +12,23 @@ the number of maps, the chosen export format and some other
 metadata. The "proj.txt" file stores the projection information as a
 proj4 string of the location the space time vector dataset was
 exported from. The file "readme.txt" describes the file format. The
-output of v.info for each vector map in the space time dataset is
+output of <em>v.info</em> for each vector map in the space time dataset is
 stored in "metadata.txt".
-
-<p>Gzip or bzip2 (default) compression can be specified with the
-<strong>compress</strong> option. Archives exported with
-<em><a href="t.vect.export.html">t.vect.export</a></em> can be imported
-with <em><a href="t.vect.import.html">t.vect.import</a></em>.
+<p>
+The tar archive can be compressed using the <b>compress</b> option. Gzip
+and bzip2 (default) are available. A <b>where</b> option can be specified,
+to export only a subset of the space time dataset. Archives exported
+with <em>t.vect.export</em> can be imported with
+<em><a href="t.vect.import.html">t.vect.import</a></em>.
 
 <h2>EXAMPLE</h2>
 
-In this example 5 vector maps are created and
+In this example, five vector maps are created and
 registered in a single space time vector dataset named <em>random_locations</em>.
 Each vector map represents random locations
 within the boundary of the state taken at 1 month intervals.
 
 <div class="code"><pre>
-    
 t.vect.export input=shoreline output=shoreline_nc
 
 tar xvfj shoreline_nc
@@ -104,9 +104,7 @@ Files:
                  time stamps in ISO-Format. Field separator is |
  metadata.txt -- The output of t.info
    readme.txt -- This file
-
 </pre></div>
-
 
 <h2>SEE ALSO</h2>
 
@@ -114,7 +112,7 @@ Files:
 <a href="t.vect.import.html">t.vect.import</a>,
 <a href="t.create.html">t.create</a>,
 <a href="t.info.html">t.info</a>,
-<a href="v.in.ogr.html">v.in.ogr</a>,
+<a href="v.out.ogr.html">v.out.ogr</a>,
 <a href="v.unpack.html">v.unpack</a>,
 <a href="t.rast.export.html">t.rast.export</a>
 </em>
@@ -124,4 +122,3 @@ Files:
 S&ouml;ren Gebbert, Th&uuml;nen Institute of Climate-Smart Agriculture
 
 <p><i>Last changed: $Date$</i>
-
