v.distance: tell user if input is 3D (esp. relevant for v.what.vect)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66426 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/v.what.vect/v.what.vect.html
+++ b/scripts/v.what.vect/v.what.vect.html
@@ -17,6 +17,8 @@ category number falls into different <b>query_map</b> polygons.
 <p>When transferring attributes from a point map to a polygon map, usually <b>dmax</b>
 has to be larger than zero (determined by distance between query points and
 polygon centroids).
+<p>In case that one or both input vector maps are 3D, features need to touch also
+in the 3rd dimension (z coordinate) in order to transfer attributes.
 
 <h2>EXAMPLES</h2>
 
