--- a/vector/v.distance/v.distance.html
+++ b/vector/v.distance/v.distance.html
@@ -50,12 +50,17 @@ the distance is then set to zero and no further tests are done.
 
 If a nearest feature does not have a category, the attribute column is 
 updated to NULL.
+
 <p>The upload <b>column</b>(s) must already exist. Create one with 
 <em><a href="v.db.addcolumn.html">v.db.addcolumn</a></em>.
 
 <p>In lat-long locations <em>v.distance</em> gives distances 
 (<em>dist</em>, <em>from_along</em>, and <em>to_along</em>) not in 
 degrees but in meters calculated as geodesic distances on a sphere.
+
+<p>
+If one or both of the input vector maps are 3D, the user is notified
+accordingly.
 
 <h2>EXAMPLES</h2>
 
