v.import: synchronize extent option name with r.import
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66451 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/v.import/v.import.html
+++ b/scripts/v.import/v.import.html
@@ -23,7 +23,7 @@ manually reprojected to the target location.
 
 <div class="code"><pre>
 # import SHAPE file at full extent and reproject to current location projection
-v.import input=research_area.shp output=research_area extents=input
+v.import input=research_area.shp output=research_area extent=input
 </pre></div>
 
 <h2>SEE ALSO</h2>
